<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entText"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnOne"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:onClick="oneButton"
                android:text="@string/one"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnTwo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:onClick="twoButton"
                android:text="@string/two"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnThree"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:onClick="threeButton"
                android:text="@string/three"
                android:textColor="#000000" />

            <ImageButton
                android:id="@+id/btnBack"
                style="@style/CardView.Light"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:onClick="backButton"
                android:text="@string/backspace"
                app:srcCompat="@drawable/backspace" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnFour"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:backgroundTint="#D31A1A"
                android:onClick="fourButton"
                android:text="@string/four"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnFive"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:onClick="fiveButton"
                android:text="@string/five"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnSix"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:onClick="sixButton"
                android:text="@string/six"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnDivide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_dark_background"
                android:onClick="divButton"
                android:text="@string/divide"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSeven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:onClick="sevenButton"
                android:text="@string/seven"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnEight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:onClick="eightButton"
                android:text="@string/eight"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnNine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:onClick="nineButton"
                android:text="@string/nine"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnMultiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_dark_background"
                android:onClick="mulButton"
                android:text="@string/multiply"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnRoot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_dark_background"
                android:onClick="rootButton"
                android:text="@string/root"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnZero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:onClick="zeroButton"
                android:text="@string/zero"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_dark_background"
                android:onClick="addButton"
                android:text="@string/add"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnSubtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_dark_background"

                android:onClick="subButton"
                android:text="@string/subtract"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button23"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_dark_background"
                android:onClick="clearButton"
                android:text="@string/clear"
                android:textColor="#000000" />

            <Button
                android:id="@+id/plusMinusBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_dark_background"
                android:onClick="plusMinusButton"
                android:text="@string/plusMinus"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnDot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_dark_background"
                android:onClick="dotButton"
                android:text="@string/point"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnEqual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardview_dark_background"
                android:onClick="equalButton"
                android:text="@string/equal"
                android:textColor="#000000" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/entText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:minHeight="48dp"
        android:text="@string/enterText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>